--- a/client/app/public/pages/home/index.html
+++ b/client/app/public/pages/home/index.html
@@ -12,8 +12,8 @@
         </div>
       </div>
 
-      <ul class="list-group">
-        {{#each todos}}
+      <ul class="list-group py-2">
+        {{#each _todos}}
           <li class="list-group-item">{{name}} <button class="btn btn-danger btn-sm float-end">Sil</button> </li>
         {{/each}}
       </ul>
