--- a/packages/loading/index.html
+++ b/packages/loading/index.html
@@ -2,7 +2,7 @@
   <div class="Loading" style="display: none;">
     <div class="d-flex justify-content-center align-items-center">
       <div class="spinner-border text-primary" role="status">
-        <span class="sr-only">Yükleniyor...</span>
+        <span class="sr-only"></span>
       </div>
     </div>
   </div>
