--- a/client/app/public/pages/home/index.html
+++ b/client/app/public/pages/home/index.html
@@ -1,6 +1,6 @@
 <template name="publicPageHome">
 
-  {{#let _todos=(state.get 'todos') _number=number.get}}
+  {{#let _todos=(state.get 'todos') _notFound=(state.get 'notFound') _number=number.get}}
 
     <div class="container py-4">
 
@@ -8,6 +8,22 @@
         <h4>Merhaba Meteor.js {{name}}</h4>
 
         <div class="ms-auto">
+          <div class="input-group mb-3">
+            <input type="search" class="form-control brd-todo-search" placeholder="Ara">
+            <span class="input-group-text" id="basic-addon1">@</span>
+          </div>
+        </div>
+
+        <div class="ms-2">
+          <select class="form-select brd-todo-sorting" >
+            <option value="1">A'dan Z'ye İsim</option>
+            <option value="2">Z'dan A'ye İsim</option>
+            <option value="3">A'dan Z'ye Açıklama</option>
+            <option value="4">Z'dan A'ye Açıklama</option>
+          </select>
+        </div>
+
+        <div class="ms-2">
           <button class="btn btn-success btn-sm float-end" data-bs-toggle="modal" data-bs-target="#brdPublicModalTodoCreateModal">Ekle</button>
         </div>
       </div>
@@ -26,8 +42,19 @@
 
         {{/each}}
 
-      </div>
+        {{#if _notFound}}
+          <div class="py-4 text-center">
+            <h4>Sonuç bulunamadı</h4>
+            <p>Aradığınız kriterlere göre sonuç bulunamadı.</p>
+          </div>
+        {{/if}}
 
+        <div class="col-sm-12 my-5 py-3">
+          {{> componentPagination paginationState=pagination}}
+        </div>
+
+
+      </div>
     </div>
 
   {{/let}}
